# Magni_OctoNav

./: .clang-format  .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
config/: base_global_planner_params.yaml  base_local_planner_params.yaml  control.yaml  costmap_common_params.yaml  move_base_params.yaml  robot_localization.yaml
config/dynamic/: global_costmap_params.yaml  local_costmap_params.yaml
config/static/: global_costmap_params.yaml  local_costmap_params.yaml
include/: avx_mathfun.h  cloud_preprocessor.hpp  gr_align.hpp  map_grid_projector.hpp  mt_plotter.hpp  option_parser.h  pc_utility.hpp  plane_detection.hpp
include/cloud_merge/: pc_utility_impl.hpp  typedefs.h  utils.hpp
include/cloud_slam/: cloud_projector.hpp  cloud_type.hpp  feature_extractor.hpp  ros_utils.hpp
include/fast_gicp_warp/: fast_gicp_warp.hpp
launch/: cloud_projector.launch  control.launch  description.launch  gmapping.launch  hector_mapping.launch  imarker.launch  keyboard_teleop.launch  localization.launch  magni_navigation_2d.launch  magni_navigation_3d.launch  magni_navigation_3d_sim.launch  magni_world.launch  move_base.launch  octomap.launch  octomapping.launch  vlp16_laserscan.launch  vlp_graph_slam.launch  vlp_graph_slam_sim.launch
magni_octonav/: CMakeLists.txt  package.xml
meshes/: support.dae  support.stl
msg/: CloudInfo.msg  FloorCoeff.msg  PointCloudByte.msg
octomap/launch/: octomap.launch
rviz/: 3d_slam_navigation.rviz  gmapping.rviz  mapping.rviz  rviz_config.rviz
scripts/: explore.py  grid_mapper.py  gzkiller.py  ogm_corner_finder.py
src/: gr_align.cc  map_grid_projector.cc  map_grid_projector_node.cc  merge.cc  mt_plotter.cc  octree_decompress.cc  option_parser.cc  overlap4pcs.cc  pcd_pcn_convert.cc  plane_detection.cc  pointcloud_compressor.cc  show_quick_transform.cc
src/cloud_merge/: cloud_preprocessor.cc  merge.cc  utils.cc
src/cloud_slam/: cloud_projector.cc  cloud_projector_node.cc  cloud_projector_nodelet.cc  feature_extractor.cc  feature_extractor_node.cc  feature_extractor_nodelet.cc
src/fast_gicp_warp/: fast_gicp_warp.cc
urdf/: VLP-16.urdf.xacro  magni.urdf.xacro
worlds/: indoor.world  willow_garage.world
