<?xml version="1.0"?>
<package format="2">
  <name>magni_octonav</name>
  <version>0.0.1</version>
  <description>The magni_octonav package</description>
  <maintainer email="felix@todo.todo">felix</maintainer>
  <license>BSD</license>

  <!-- Used in the actual robot -->
  <!-- <run_depend>magni_base</run_depend>  -->

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>octomap</build_export_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
